# nature-grade-visualization-playground

./: .gitignore  BioLizardStylePython_In_Action.ipynb  BioLizardStyleR_In_Action.Rmd  BioLizardStyleR_In_Action.html  BiolizardRStyle.Rmd  BiolizardRStyle.html  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  l_viridis.jscm
BioLizardStylePython/: CHANGELOG.md  ForPackage.py  LICENSE  README.md  lizard_style.mplstyle  pyproject.toml  test_plotlystyle.ipynb
BioLizardStylePython/ExampleScripts/: Biolizard_Footer.py  DivergentColormap.py  QualitativeColormap.py  SequentialColormap.py
BioLizardStylePython/docs/: conf.py  example.ipynb
BioLizardStylePython/docs/_build/doctrees/: environment.pickle  example.doctree  index.doctree
BioLizardStylePython/docs/_build/html/: .buildinfo  example.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
BioLizardStylePython/docs/_build/html/_sources/: example.ipynb.txt  index.md.txt  plotly.ipynb.txt
BioLizardStylePython/docs/_build/jupyter_execute/: example.ipynb
BioLizardStylePython/src/BioLizardStylePython/: __init__.py  l_viridis.py  l_viridis1.py  lizard_style.mplstyle  plotly_template.py  utils.py
BioLizardStylePython/tests/: test_palettes.py  test_plots.py
BioLizardStyleR/: .Rhistory  BioLizardStyleR.Rproj  DESCRIPTION  LICENSE.md  NAMESPACE  NEWS.md
BioLizardStyleR/R/: color_functions.R  finalise_lizardplot.R  install_.biolizard_fonts.R  install_biolizard_fonts.R  l_viridis.R  lizard_style.R  reset_colors.R  zzz.R
BioLizardStyleR/man/: BioLizardStyleR-package.Rd  biolizard_pal_divergent.Rd  biolizard_pal_hue.Rd  biolizard_pal_l_viridis.Rd  biolizard_pal_paired.Rd  biolizard_pal_qualitative.Rd  biolizard_pal_sequential.Rd  biolizard_qualitative_colors.Rd  biolizard_qualitative_palette.Rd  biolizard_scales.Rd  blz_blue.Rd  blz_green.Rd  blz_yellow.Rd  compute_font_size.Rd  create_footer.Rd  finalise_lizardplot.Rd  get_image_path.Rd  get_path.Rd  install_biolizard_fonts.Rd  left_align.Rd  lizard_layout.Rd  lizard_style.Rd  reset_colors.Rd  save_plot.Rd  scale_color_biolizard.Rd  scale_color_divergent_continuous_biolizard.Rd  scale_color_gradient_biolizard.Rd  scale_color_sequential_continuous_biolizard.Rd  scale_colour_divergent_discrete_biolizard.Rd  scale_colour_qualitative_biolizard.Rd  scale_colour_sequential_biolizard.Rd  scale_colour_sequential_discrete_biolizard.Rd  scale_fill_biolizard.Rd  scale_fill_divergent_continuous_biolizard.Rd  scale_fill_divergent_discrete_biolizard.Rd  scale_fill_gradient_biolizard.Rd  scale_fill_qualitative_biolizard.Rd  scale_fill_sequential_biolizard.Rd  scale_fill_sequential_continuous_biolizard.Rd  scale_fill_sequential_discrete_biolizard.Rd  (+1 more)
BioLizardStyleR/tests/: testthat.R
BioLizardStyleR/vignettes/: BioLizardStyleR.Rmd  style.css
docs/: README.md  index.html
docs/BioLizardStylePython/: searchindex.js
font-lato/: CHANGELOG.txt  MANIFEST.in  README.rst  setup.py
(+33 files in other folders)
