[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BioLizardStylePython"
version = "0.2.0"
authors = [
  { name = "BioLizard", email = "contact@lizard.bio"},
  { name = "Robbe Neirynck", email = "robbe.neirynck1@hotmail.com" }
]
maintainers = [
  { name = "Alexander Koch", email = "alexander.koch@lizard.bio"},
  { name = "Aniko Meijer", email = "aniko.meijer@lizard.bio"}
]
description = "Enhance plots with the signature Biolizard aesthetic for matplotlib and seaborn."
readme = "README.md"
changelog_file = "CHANGELOG.md" 
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib>=3.7.1",
    "Pillow>=9.4.0"
]


[project.urls]
"Homepage" = "https://github.com/lizard-bio/nature-grade-visualization-playground/tree/main"
